--- a/gb/21/7/11/n13082243.md
+++ b/gb/21/7/11/n13082243.md
@@ -1,21 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wtnrng3147/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wtnrng3147/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wtnrng3147/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cufnqn370/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【珍言真语】李有甫：折磨蝎子 军官得心绞痛怪病</h2>
-<a href="https://d2torrlf4djx10.cloudfront.net/D1nVD11eh"><img width="600" src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d15m60lsma25jk.cloudfront.net/N0zVD11eb"><img width="600" src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
-	<p>【大纪元2021年07月12日讯】（大纪元记者林慧真、梁珍香港报导）上次访问（见文【<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E7%8F%8D%E8%A8%80%E7%9C%9F%E8%AF%AD.md#1">珍言真语</a>】<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E6%9D%8E%E6%9C%89%E7%94%AB.md#1">李有甫</a>：在507所见证<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E7%89%B9%E5%BC%82%E5%8A%9F%E8%83%BD.md#1">特异功能</a>）引起了观众和读者们的兴趣并留言，针对人体特异功能和一些神秘文化，美国洛杉矶的中国<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E4%BA%BA%E4%BD%93%E7%A7%91%E5%AD%A6.md#1">人体科学</a>研究中心原副研究员李有甫，再次接受大纪元《珍言真语》节目采访，补充了他1980年代末在“507所”工作期间，以及后来私下会诊及在医学学术会上的见闻。</p>
+	<p>【大纪元2021年07月12日讯】（大纪元记者林慧真、梁珍香港报导）上次访问（见文【<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%8F%8D%E8%A8%80%E7%9C%9F%E8%AF%AD.md#1">珍言真语</a>】<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E6%9D%8E%E6%9C%89%E7%94%AB.md#1">李有甫</a>：在507所见证<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%89%B9%E5%BC%82%E5%8A%9F%E8%83%BD.md#1">特异功能</a>）引起了观众和读者们的兴趣并留言，针对人体特异功能和一些神秘文化，美国洛杉矶的中国<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E4%BA%BA%E4%BD%93%E7%A7%91%E5%AD%A6.md#1">人体科学</a>研究中心原副研究员李有甫，再次接受大纪元《珍言真语》节目采访，补充了他1980年代末在“507所”工作期间，以及后来私下会诊及在医学学术会上的见闻。</p>
 <p>以下为整理的采访内容。</p>
-<h2>测试<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E7%89%B9%E5%BC%82%E5%8A%9F%E8%83%BD.md#1">特异功能</a>者看前世 三人答案相同</h2>
-<p>梁珍：你当时作为钱学森领导下的507研究所的<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E4%BA%BA%E4%BD%93%E7%A7%91%E5%AD%A6.md#1">人体科学</a>研究中心下面的研究员，做人体功能鉴定，可以跟我们再讲一下，当时是怎么鉴定的，还有些什么特别的故事吗？</p>
-<p><ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E6%9D%8E%E6%9C%89%E7%94%AB.md#1">李有甫</a>：我已经讲了当时他们怎么测试我的。因为我要去做研究工作，他讲要找研究别人（懂科学知识）的人，他本身还得有功能，这样他能够更理解研究的时候，是怎么回事。因为有很多专家，他们不知道有功能的人的心理状态、他（的功能）是怎么运作的，什么都不知道，只知道他测试的一个过程，因为科学解决不了这个问题。</p>
+<h2>测试<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%89%B9%E5%BC%82%E5%8A%9F%E8%83%BD.md#1">特异功能</a>者看前世 三人答案相同</h2>
+<p>梁珍：你当时作为钱学森领导下的507研究所的<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E4%BA%BA%E4%BD%93%E7%A7%91%E5%AD%A6.md#1">人体科学</a>研究中心下面的研究员，做人体功能鉴定，可以跟我们再讲一下，当时是怎么鉴定的，还有些什么特别的故事吗？</p>
+<p><ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E6%9D%8E%E6%9C%89%E7%94%AB.md#1">李有甫</a>：我已经讲了当时他们怎么测试我的。因为我要去做研究工作，他讲要找研究别人（懂科学知识）的人，他本身还得有功能，这样他能够更理解研究的时候，是怎么回事。因为有很多专家，他们不知道有功能的人的心理状态、他（的功能）是怎么运作的，什么都不知道，只知道他测试的一个过程，因为科学解决不了这个问题。</p>
 <p>上次说的那个小女孩她有功能，她能看到人的过去世。我（测试时）不说多少次轮回，我只说一次，比如你的过去世是什么、他的过去世是怎么样的，我说现在先把一世能证实了，可以相信了，那我们再往下去研究。</p>
 <p>我找了一个人，这个人天生就有功能，（让他看）一个很漂亮的女孩，说这小孩过去世是一只孔雀；那么他看完了，我再让他看另外一个人，又是另外一个答案；我叫他连续看了三个人，他给我一个答案，他们三个人过去世是A、B、C，我不说具体的了。那么这个人走了，另外一个也有功能的人来了，是一个小孩，他的功能也很强，他们俩从来没有见过面，而且他们俩也不认识，我让他看这三个人，他给我的答案是一样的。</p>
 <p>当时我们学术会有一个在军队情报部门的女孩，个子很高，她的功能很强，我就让她看这三个人，她的答案跟那两个孩子是一样的。那么这种测试方法在科学上是可以认可的，它就叫做“双盲测试”，就是背对背谁也不见谁。他们的答案为什么一样呢？这肯定是有一定的道理。我自己在探索（修炼）当中知道是怎么回事，但是给别人说呢，我只能用这个办法去说，证实它是可以相信的。</p>
 <p>梁珍：你们当时要把这些人体的特异功能，确实从科学方面证实，这种研究方法是不是当时也是首次引用的？当时人体科学鉴定，也是中国从来没有过的一个领域吧？</p>
 <p>李有甫：是的，当时学术界很多人在全国都是比较有名望的，他们测试，大家对这些东西都认可了。我参加过很多学术会，比如有一次在辽宁空军疗养院，在兴城，当时有很多的高级干部也参加了，他们也喜欢研究，中央领导也有很多人喜欢，他们都相信。（因为）学术界的人已经证实了，已经研究出来了很多东西。在研究当中我自己有体会，所以我心里肯定是很相信的。</p>
-<p><center><a src=""></a><a href="https://d2torrlf4djx10.cloudfront.net/D1nVD11eh"><img width="600" src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/385f807c-dac7-462f-b93f-a28d69561913?r=16x9&amp;d=1366" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center></p>
+<p><center><a src=""></a><a href="https://d15m60lsma25jk.cloudfront.net/N0zVD11eb"><img width="600" src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/385f807c-dac7-462f-b93f-a28d69561913?r=16x9&amp;d=1366" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center></p>
 <h2>折磨蝎子遭上身 军官得心绞痛怪病</h2>
 <p>李有甫：我还想讲另外一个更具体的，就是人确实是做什么事都有一个反馈、一个回报、一个报应，这种事情确实是有的，只是它的方式不一样，有的早，有的晚，有的是以低级的方式，有的是以更隐蔽的、人们不容易发掘的那种方式表现出来。</p>
 <p>后来我离开研究所了，但是他们知道我的背景，当时北京有很多朋友不管是哪个阶层的，他们有什么病都愿意来找我给他看看。当时我也研究中医、经络学。我的毕业论文是涉及经络、脑电图、中医的东西，我用我的方法，比如用针灸给他们治病，那个时候大家都愿意私下找我。</p>
@@ -39,11 +39,11 @@
 <p>我给他看了以后呢，因为我能把这件事（蝎子上身）说出来，这也是碰到一起了。他说：“你说的这件事情，我想起来了。”就是从那时开始，他把那个蝎子整死了，就出现了这个病。</p>
 <p>我心里有一个答案，我自己的一个解释吧，我感觉任何生命它都有个场存在，做什么事情也不能过分，我就想那个蝎子它肯定是有冤仇来报的，（蛰了人）你把它杀死就完了，你要这样折磨它，让它死几回多少次的话，可能它就会找你报仇。</p>
 <p>这种场合上，当时我给他的解释，没有用佛教里面的东西，我就从人体科学（方面讲），这种场、这种东西它是另外空间的。这个事没法否定，因为他那个事情和我自己所看到的给他治疗的过程，都吻合了。</p>
-<h2>1990年<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E5%8C%BB%E5%AD%A6.md#1">传统医学</a>大会现场遥诊</h2>
+<h2>1990年<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E5%8C%BB%E5%AD%A6.md#1">传统医学</a>大会现场遥诊</h2>
 <p>梁珍：这故事很有意思，就是在提醒人真的要善待生命，这种善恶有报的道理。我还想问一下，507研究所被很多人都认为是个神秘的研究所，你在里面工作了多长时间，当时大家研究得出的结论是怎么样的？</p>
 <p>李有甫：其实没有结论，每个人的研究，比如梅磊，比如一些研究人员，他们经常发表文章，我就在文章上知道这个人，他写一个气功状态过程，大脑脑电波同步化的现象。比如说他测试到一个人的功能很强，测试到他的脑袋的形状图是个太极图，我知道是怎么回事，他们也奇怪，因为他也不练功嘛，他们也没有特异功能，他也不知道怎么回事。所以很多文章发表了，当时就完了。</p>
 <p>我陆陆续续在那里不到两年，一年多，后来我就离开了，我就出国了，去了别的国家，后来又来到美国。出国后，就是讲一些人体科学、中医的东西，我也喜欢宣传中国的传统文化，人们也容易接受，我很喜欢这样做。那么在国内当时那个环境没有结果，因为没办法也没有人给你统一认识。所以后来大家也就慢慢就没有活动了，这方面的研究越来越少了，这个热潮也就过去了。</p>
-<p>1990年我们在河南开了一个“全国中青年医学大会”，那个是<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E5%8C%BB%E5%AD%A6.md#1">传统医学</a>大会，包括中医，也包括西医，包括其它的科目，还有气功，还有武术，还有那个点穴等等这些都有。在那个会上，大家就是讨论这方面的，我看意见都不一致，最后都不承认有特异功能这回事。当时我就在那个会上，我给他们表演了一个遥诊，其实我就是诊病，当时我就是为了证实这个事（特异功能）是真的。</p>
+<p>1990年我们在河南开了一个“全国中青年医学大会”，那个是<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E5%8C%BB%E5%AD%A6.md#1">传统医学</a>大会，包括中医，也包括西医，包括其它的科目，还有气功，还有武术，还有那个点穴等等这些都有。在那个会上，大家就是讨论这方面的，我看意见都不一致，最后都不承认有特异功能这回事。当时我就在那个会上，我给他们表演了一个遥诊，其实我就是诊病，当时我就是为了证实这个事（特异功能）是真的。</p>
 <p>那个会上大多数（医生）是西医的基础，他们的底子都是西医。那个会好多专家都去了，当时中国针灸学会的会长程莘农，还有杨甲三，还有吕炳奎，我背后这个字就是吕炳奎写的。吕炳奎就是中国最早的中医局局长，是卫生部下属的一个中医部的，他是最高的，叫他“中医司令”，也叫中医司的司长。吕炳奎在很早时期，他就在提倡中医，你知道他是谁吗？他就是吕加平的父亲。</p>
 <p>梁珍：批判江泽民（汉奸卖国贼身世）的那个（吕加平）。</p>
 <p>李有甫：对，吕加平，就跟他父亲性格很像，他父亲也是对一些事情，认准了他很坚持。他就让我给他看看病，他腰疼，他别的医生都不要。后来他说，他喜欢给人家写个字，我说那你就帮我写两句话，我就挂起来了。</p>
@@ -55,48 +55,48 @@
 <p>等散了会以后，他带上一个国务院老干部处的什么主任医生，他说：“我不理解你这个到底是什么（原理）。”我说“你不理解，你可以再试”，他又跟我说一个人名字，我说：“你必须得是真人真事，你得真了解他，你不许骗，不许给我说假的。”他说：“没有问题，我是搞科研的。”</p>
 <p>他说了一个人，好像是他的外甥女，她的病我说得非常详细，我就不讲了，他说：“完全正确。”他问我是怎么回事，后来我就用我的方法解释了，人都有场，我说可以把这场提到手里来分析，他的身体有什么情况，在这场里都有。我这么解释呢，他勉强接受，但是还不明白，因为他还没有体会嘛，他没有办法理解。</p>
 <p>我知道是有个场的感觉，但是，这是什么？那我只有冥冥中相信，有更高层的空间，有另外空间，有另外的生命的表现形式。所以我在心理头，很多事情有了一个认识，逐渐逐渐的就相信，人不光是一个肉身，人也不光是一个思想，他有另外的一个高层的不同境界的表现形式。比如人他有元神，在另外空间所有的生命都有它的存在形式。这对我很有帮助，所以后来我对人体、宇宙、生命，怎么认识怎么研究，我自己心里知道了。</p>
-<p>完整访问请观看《<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E7%8F%8D%E8%A8%80%E7%9C%9F%E8%AF%AD.md#1">珍言真语</a>》节目。</p>
+<p>完整访问请观看《<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%8F%8D%E8%A8%80%E7%9C%9F%E8%AF%AD.md#1">珍言真语</a>》节目。</p>
 <p>责任编辑：李穹 ＃</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/21/6/29/n13054634.md#1">【珍言真语】罗家聪：外资急撤 香港失国际中心</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/21/7/1/n13060579.md#1">【珍言真语】谢田：从经济数据上看中共罪恶</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/21/7/4/n13066355.md#1">【珍言真语】邵乐敏：美声唱法能量强 新唐人大赛文化兼容</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/21/7/6/n13071988.md#1">【珍言真语】李有甫：在507所见证特异功能</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/21/6/29/n13054634.md#1">【珍言真语】罗家聪：外资急撤 香港失国际中心</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/21/7/1/n13060579.md#1">【珍言真语】谢田：从经济数据上看中共罪恶</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/21/7/4/n13066355.md#1">【珍言真语】邵乐敏：美声唱法能量强 新唐人大赛文化兼容</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/21/7/6/n13071988.md#1">【珍言真语】李有甫：在507所见证特异功能</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/26/n10742140.md#1" target="_blank">韩丽明：麻雀的哀歌</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11238180.md#1" target="_blank">感恩法轮功师父 教我做个善良人</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/9/n10840435.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/14/n7998054.md#1" target="_blank">“如没有法轮功 我后半生一定在轮椅上度过”</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/1/25/n13529163.md#1">【百年真相】中共是真凶？李公朴闻一多遇害谜团</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/1/31/n13545371.md#1">【百年真相】30亿元大贪官是怎样“炼”成的？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/1/27/n13534235.md#1">【未解之谜】梅辛传之二：梅辛惊人的读心术</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/4/n13554659.md#1">环佩声声古风来 传统腰饰之美</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/1/20/n13518302.md#1">【奇医】不用开膛的“提心”医术 救命回春人称奇</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/9/n13565968.md#1">【拍案惊奇】中共放任人口黑市 多少孩子被拐？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/9/n13566812.md#1">【秦鹏直播】中国冬奥胜之不武？遭韩国指作弊</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/9/n13566304.md#1">【财商天下】能源新动向 核能有潜力？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/8/n13563836.md#1">中国速滑选手“可疑”动作海外热传 陆媒噤声</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/8/n13563654.md#1">同为美国少女 朱易谷爱凌在中国待遇大不同</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/8/n13563206.md#1">【中国观察】海外放风文章与中共二十大变数</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/7/n13561246.md#1">高圆圆晒片场幕后花絮照 亲自动手裁剪戏服</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/8/n13563829.md#1">升格当爸才半个月 导演明金成因心肌梗塞骤逝</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/8/n13563708.md#1">2022年奥斯卡金像奖入围名单公布</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/8/n13562378.md#1">冬奥速滑赛争议多 韩艺人发声遭中国网友攻击</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/9/n13566435.md#1">香港因疫情菜价飙涨 黎姿晒绿油油午餐惹人羡</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/8/n13563441.md#1">姜黄护肝、防心血管疾病 2种吃法更有效</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/7/n13561260.md#1">Omicron传播之广之快 仅1918年大流感堪比</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/8/n13562048.md#1">一碗拉面含盐量惊人！这样吃面 伤心又伤肾</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/7/n13560758.md#1">好吸收的蛋白质！乳清蛋白不只增肌 有5大益处</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/8/n13562209.md#1">【健康1+1】新大规模研究 揭伊维菌素抗新冠效果</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/2/n13690909.md#1">【马克时空】上百俄机被乌击落 战机如何发现导弹来袭?</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/11/n13082243.htm">【珍言真语】李有甫：折磨蝎子 军官得心绞痛怪病</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/11/n13082243.htm">【珍言真语】李有甫：折磨蝎子 军官得心绞痛怪病</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wtnrng3147/djy/blob/master/gb/21/7/11/n13082243.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wtnrng3147/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wtnrng3147/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cufnqn370/djy/blob/master/gb/21/7/11/n13082243.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
