--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -134,12 +134,12 @@
 <li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13689482.md#1">俄石油公司燃料库发生大火 视频曝光</a></li>
 <li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13689683.md#1">乌情报：在俄入侵前 中共大规模网攻乌克兰</a></li>
 <li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/2/n13690617.md#1">【十字路口】为俄助攻 中共网军提前进攻乌国？</a></li>
-<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13689827.md#1">新世纪力作《演员梦》两主演双获最佳女主角奖</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13689827.md#1">新世纪力作《演员梦》获七奖 两女主双双获奖</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11437710.md#1" target="_blank">林辉：国民党撤至台湾后破获的中共渗透大案</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/9/n10841367.md#1" target="_blank">一群百岁老人绝处逢生的故事</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/25/n10666303.md#1" target="_blank">观雨堂主：大陆高校的“秘密信息员”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/26/n11412078.md#1" target="_blank">胡平：未来道德重建 法轮功将发挥更大作用</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
