--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -139,7 +139,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/25/n10666303.md#1" target="_blank">观雨堂主：大陆高校的“秘密信息员”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/26/n11412078.md#1" target="_blank">胡平：未来道德重建 法轮功将发挥更大作用</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/18/n10313172.md#1" target="_blank">孙陇：文革中张国柱一家的自杀</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/11/n11582447.md#1" target="_blank">在中国经商 有这样一群可信赖的生意人</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
