--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -134,12 +134,12 @@
 <li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13689482.md#1">俄石油公司燃料库发生大火 视频曝光</a></li>
 <li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13689683.md#1">乌情报：在俄入侵前 中共大规模网攻乌克兰</a></li>
 <li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/2/n13690617.md#1">【十字路口】为俄助攻 中共网军提前进攻乌国？</a></li>
-<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13689827.md#1">新世纪力作《演员梦》获七奖 两女主双双获奖</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13689827.md#1">新世纪力作《演员梦》两主演双获最佳女主角奖</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/18/n10313172.md#1" target="_blank">孙陇：文革中张国柱一家的自杀</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/11/n11582447.md#1" target="_blank">在中国经商 有这样一群可信赖的生意人</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/18/n11528891.md#1" target="_blank">观雨堂主：中共对中国与世界的公开掠夺</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/8/n11308403.md#1" target="_blank">我的父亲</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
