--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -139,7 +139,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/13/n11255834.md#1" target="_blank">颜丹：日本作家村上春树新作引发的中国效应</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/9/28/n4538256.md#1" target="_blank">硅谷工程师修炼法轮功 无病一身轻</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/28/n2978870.md#1" target="_blank">鲜为人知的马克思之八：魔性的马克思</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977742.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(2) 历练的旅程</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
