--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -139,7 +139,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/8/n10285705.md#1" target="_blank">李庆霖“知青英雄”悲剧是如何造成的(下)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/24/n9888525.md#1" target="_blank">从瘫痪边缘走向健康 内科医生感恩李洪志先生</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/21/n10730270.md#1" target="_blank">观雨堂主：“道德错乱”下的卞仲耘之死</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/11/n11250223.md#1" target="_blank">美国北德州十城市宣布 法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
